<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="@string/tx_title"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:gravity="top"
                android:text="@string/tx_subtitle1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:flow_horizontalAlign="center"
                app:flow_verticalAlign="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:gravity="top"
                android:text="@string/tx_subtitle2"
                android:textColor="#3DDB83"
                android:textSize="20sp"
                android:textStyle="bold"
                app:flow_horizontalAlign="center"
                app:flow_verticalAlign="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:gravity="top"
                android:text="@string/tx_subtitle3"
                android:textSize="20sp"
                android:textStyle="bold"
                app:flow_horizontalAlign="center"
                app:flow_verticalAlign="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/card0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/card4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/card8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />

            <ImageView
                android:id="@+id/card11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/card_bg" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TriesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/txtTries"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivStartLogo"
            android:layout_width="match_parent"
            android:layout_height="467dp"
            app:srcCompat="@drawable/card_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/restartBtn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/bt_restart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/playBtn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/bt_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>